--- a/III Models/3 Model C4/3 Feature Selection/1.0.1 OLS_contData.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.1 OLS_contData.ipynb
@@ -2,12 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 1,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_28044\\3619633928.py:2: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "# Import necessary libraries\n",
         "import pandas as pd\n",
@@ -18,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -45,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -59,33 +74,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol   DI55102   DI55152  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  0.965043  0.924515   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  0.965043  0.924515   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  0.965043  0.924515   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  0.971625  0.933431   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  0.971625  0.933431   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
+            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
+            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
+            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
+            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
+            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
             "\n",
-            "    DI55580   FC55003   FC55552   FC55569  FC55576  FFC55553  FFC55555  \\\n",
-            "0  1.014885  5308.885  40409.25  6924.645  322.177  1.049540  0.751183   \n",
-            "1  1.014885  5308.885  40409.25  6924.645  322.177  1.049540  0.751183   \n",
-            "2  1.014885  5308.885  40409.25  6924.645  322.177  1.049540  0.751183   \n",
-            "3  1.015146  5297.320  40866.28  6918.194  329.701  1.050092  0.764579   \n",
-            "4  1.015146  5297.320  40866.28  6918.194  329.701  1.050092  0.764579   \n",
+            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
+            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
+            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
+            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
+            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
             "\n",
-            "    LC52572   LC55553   LC55557   LC55568    LC90366   LC90368   PI55004  \\\n",
-            "0  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750  1.236360   \n",
-            "1  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750  1.236360   \n",
-            "2  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750  1.236360   \n",
-            "3  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306  1.190342   \n",
-            "4  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306  1.190342   \n",
+            "    TI55021   TI55023  \n",
+            "0  213.8740  212.3085  \n",
+            "1  213.8740  212.3085  \n",
+            "2  213.8740  212.3085  \n",
+            "3  214.5402  212.9866  \n",
+            "4  214.5402  212.9866  \n",
             "\n",
-            "    PI55020   TC55552   TC55553   TC55555   TI40050   TI55021   TI55023  \n",
-            "0 -0.389406  179.0115  213.9375  179.9940  82.96565  213.8740  212.3085  \n",
-            "1 -0.389406  179.0115  213.9375  179.9940  82.96565  213.8740  212.3085  \n",
-            "2 -0.389406  179.0115  213.9375  179.9940  82.96565  213.8740  212.3085  \n",
-            "3 -0.318266  180.7166  201.0680  179.9338  82.41662  214.5402  212.9866  \n",
-            "4 -0.318266  180.7166  201.0680  179.9338  82.41662  214.5402  212.9866  \n"
+            "[5 rows x 33 columns]\n"
           ]
         }
       ],
@@ -97,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -112,7 +122,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -123,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 6,
       "metadata": {
         "trusted": true
       },
@@ -135,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -152,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -168,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -185,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -198,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -213,7 +223,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -224,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -236,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -254,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -266,8 +276,8 @@
             "Dep. Variable:                Butanol   R-squared:                       0.242\n",
             "Model:                            OLS   Adj. R-squared:                  0.241\n",
             "Method:                 Least Squares   F-statistic:                     413.0\n",
-            "Date:                Mon, 11 Mar 2024   Prob (F-statistic):               0.00\n",
-            "Time:                        21:38:46   Log-Likelihood:            -1.3877e+05\n",
+            "Date:                Tue, 19 Mar 2024   Prob (F-statistic):               0.00\n",
+            "Time:                        17:56:01   Log-Likelihood:            -1.3877e+05\n",
             "No. Observations:               40127   AIC:                         2.776e+05\n",
             "Df Residuals:                   40095   BIC:                         2.779e+05\n",
             "Df Model:                          31                                         \n",
@@ -333,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -364,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -384,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -407,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -417,7 +427,7 @@
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[52], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m predictions \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X_sm)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Plotting\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[43mplt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscatter\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Scatter plot of the data\u001b[39;00m\n\u001b[0;32m     13\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(X, predictions, color\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m'\u001b[39m)  \u001b[38;5;66;03m# Regression line\u001b[39;00m\n\u001b[0;32m     14\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mScatter plot with Regression Line\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "Cell \u001b[1;32mIn[18], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m predictions \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X_sm)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Plotting\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[43mplt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscatter\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Scatter plot of the data\u001b[39;00m\n\u001b[0;32m     13\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(X, predictions, color\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m'\u001b[39m)  \u001b[38;5;66;03m# Regression line\u001b[39;00m\n\u001b[0;32m     14\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mScatter plot with Regression Line\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
             "File \u001b[1;32mc:\\Users\\austinsh\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\matplotlib\\pyplot.py:3684\u001b[0m, in \u001b[0;36mscatter\u001b[1;34m(x, y, s, c, marker, cmap, norm, vmin, vmax, alpha, linewidths, edgecolors, plotnonfinite, data, **kwargs)\u001b[0m\n\u001b[0;32m   3665\u001b[0m \u001b[38;5;129m@_copy_docstring_and_deprecators\u001b[39m(Axes\u001b[38;5;241m.\u001b[39mscatter)\n\u001b[0;32m   3666\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mscatter\u001b[39m(\n\u001b[0;32m   3667\u001b[0m     x: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m|\u001b[39m ArrayLike,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   3682\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs,\n\u001b[0;32m   3683\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m PathCollection:\n\u001b[1;32m-> 3684\u001b[0m     __ret \u001b[38;5;241m=\u001b[39m \u001b[43mgca\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscatter\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   3685\u001b[0m \u001b[43m        \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3686\u001b[0m \u001b[43m        \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3687\u001b[0m \u001b[43m        \u001b[49m\u001b[43ms\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3688\u001b[0m \u001b[43m        \u001b[49m\u001b[43mc\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mc\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3689\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmarker\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmarker\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3690\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcmap\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcmap\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3691\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnorm\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnorm\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3692\u001b[0m \u001b[43m        \u001b[49m\u001b[43mvmin\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mvmin\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3693\u001b[0m \u001b[43m        \u001b[49m\u001b[43mvmax\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mvmax\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3694\u001b[0m \u001b[43m        \u001b[49m\u001b[43malpha\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43malpha\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3695\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlinewidths\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlinewidths\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3696\u001b[0m \u001b[43m        \u001b[49m\u001b[43medgecolors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43medgecolors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3697\u001b[0m \u001b[43m        \u001b[49m\u001b[43mplotnonfinite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mplotnonfinite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3698\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m}\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mis\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mnot\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3699\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   3700\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3701\u001b[0m     sci(__ret)\n\u001b[0;32m   3702\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m __ret\n",
             "File \u001b[1;32mc:\\Users\\austinsh\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\matplotlib\\__init__.py:1478\u001b[0m, in \u001b[0;36m_preprocess_data.<locals>.inner\u001b[1;34m(ax, data, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1475\u001b[0m \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(func)\n\u001b[0;32m   1476\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minner\u001b[39m(ax, \u001b[38;5;241m*\u001b[39margs, data\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m   1477\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1478\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43max\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msanitize_sequence\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1480\u001b[0m     bound \u001b[38;5;241m=\u001b[39m new_sig\u001b[38;5;241m.\u001b[39mbind(ax, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   1481\u001b[0m     auto_label \u001b[38;5;241m=\u001b[39m (bound\u001b[38;5;241m.\u001b[39marguments\u001b[38;5;241m.\u001b[39mget(label_namer)\n\u001b[0;32m   1482\u001b[0m                   \u001b[38;5;129;01mor\u001b[39;00m bound\u001b[38;5;241m.\u001b[39mkwargs\u001b[38;5;241m.\u001b[39mget(label_namer))\n",
             "File \u001b[1;32mc:\\Users\\austinsh\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\matplotlib\\axes\\_axes.py:4652\u001b[0m, in \u001b[0;36mAxes.scatter\u001b[1;34m(self, x, y, s, c, marker, cmap, norm, vmin, vmax, alpha, linewidths, edgecolors, plotnonfinite, **kwargs)\u001b[0m\n\u001b[0;32m   4650\u001b[0m y \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mma\u001b[38;5;241m.\u001b[39mravel(y)\n\u001b[0;32m   4651\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x\u001b[38;5;241m.\u001b[39msize \u001b[38;5;241m!=\u001b[39m y\u001b[38;5;241m.\u001b[39msize:\n\u001b[1;32m-> 4652\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx and y must be the same size\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   4654\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m s \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   4655\u001b[0m     s \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m20\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m mpl\u001b[38;5;241m.\u001b[39mrcParams[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_internal.classic_mode\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01melse\u001b[39;00m\n\u001b[0;32m   4656\u001b[0m          mpl\u001b[38;5;241m.\u001b[39mrcParams[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlines.markersize\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2.0\u001b[39m)\n",
