--- a/IV Optimize/C10 - FFC55555 Configuration Alternatives/1.01.75 XGB - SavingsDeterminant.ipynb
+++ b/IV Optimize/C10 - FFC55555 Configuration Alternatives/1.01.75 XGB - SavingsDeterminant.ipynb
@@ -348,7 +348,7 @@
         "        ffc_adjusted = df_All.at[index, 'FFC55555_adj']\n",
         "\n",
         "        if decanol < 0.01:\n",
-        "            if ffc_adjusted >= 0.76: # Can be adjusted to the lowest rC4 desired (desired +0.01)\n",
+        "            if ffc_adjusted >= 0.74: # Can be adjusted to the lowest rC4 desired (desired -0.01)\n",
         "                df_All.at[index, 'FFC55555_adj'] -= 0.01\n",
         "            else:\n",
         "                break  # Next Record\n",
@@ -693,14 +693,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_19276\\938155909.py:3: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_20972\\938155909.py:3: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -835,7 +835,7 @@
               "[4863 rows x 4 columns]"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -851,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -981,7 +981,7 @@
               "[4864 rows x 4 columns]"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1012,14 +1012,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_19276\\928042281.py:3: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_20972\\928042281.py:3: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -1154,7 +1154,7 @@
               "[4863 rows x 4 columns]"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1169,7 +1169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -1299,7 +1299,7 @@
               "[4864 rows x 4 columns]"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1323,14 +1323,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_19276\\1892453332.py:3: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_20972\\1892453332.py:3: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -1465,7 +1465,7 @@
               "[4863 rows x 4 columns]"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1480,7 +1480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -1610,7 +1610,7 @@
               "[4864 rows x 4 columns]"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
